--- a/ui/coreui/css/style.css
+++ b/ui/coreui/css/style.css
@@ -1,7 +1,7 @@
 /**
- * CoreUI - Open Source Bootstrap Admin Template
+ *  - Open Source Bootstrap Admin Template
  * @version v1.0.0-alpha.6
- * @link http://coreui.io
+ * @link http://.io
  * Copyright (c) 2017 creativeLabs Łukasz Holeczek
  * @license MIT
  */
